tests/cases/generics.stderr
error: oops
 --> $DIR/generics.rs:4:11
  |
4 | struct Foo<T> {
  |           ^
